// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses correctly 1`] = `
<Container>
  <ListHeader>
    <Text
      display={
        Array [
          "block",
          "none",
        ]
      }
    >
      Expenses
    </Text>
    <Text
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Expense
    </Text>
    <Text
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Amount
    </Text>
  </ListHeader>
  <ListBody>
    <ExpenseListItem
      amount={100}
      createdAt={2000}
      description="water bill"
      id="1"
      key="1"
    />
    <ExpenseListItem
      amount={2000}
      createdAt={4200}
      description="rent bill"
      id="2"
      key="2"
    />
    <ExpenseListItem
      amount={500}
      createdAt={3000}
      description="electricity bill"
      id="3"
      key="3"
    />
  </ListBody>
</Container>
`;

exports[`should render ExpenseList without expenses 1`] = `
<Container>
  <ListHeader>
    <Text
      display={
        Array [
          "block",
          "none",
        ]
      }
    >
      Expenses
    </Text>
    <Text
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Expense
    </Text>
    <Text
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Amount
    </Text>
  </ListHeader>
  <ListBody>
    <ExpenseListItem />
  </ListBody>
</Container>
`;

exports[`should render ExpenseList without expenses props 1`] = `
<Container>
  <ListHeader>
    <Text
      display={
        Array [
          "block",
          "none",
        ]
      }
    >
      Expenses
    </Text>
    <Text
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Expense
    </Text>
    <Text
      display={
        Array [
          "none",
          "block",
        ]
      }
    >
      Amount
    </Text>
  </ListHeader>
  <ListBody>
    <ExpenseListItem />
  </ListBody>
</Container>
`;
